tests/NormalTests/paczka2/big_fuzzy/31978071.err
Error in line 3: boKiNH A365 62,3
Error in line 12: pClFn8F A439 42,8
Error in line 13: qcAIsmbbXh4 A439 13,8
Error in line 18: A123 S607 142,6
Error in line 41: pClFn8F S607 80,8
Error in line 30: M8SOlLZ4 A365 123,1
Error in line 46: M8SOlLZ4 A439 58,1
Error in line 45: pClFn8F A439 7,0
Error in line 50: A123 A123 7,7
Error in line 48: pClFn8F A123 80,4
Error in line 53: pClFn8F A365 154,20
Error in line 44: boKiNH A439 55,7
Error in line 47: M8SOlLZ4 A365 25,5
Error in line 52: pClFn8F A365 87,5
Error in line 70: qcAIsmbbXh4 A123 319,49
Error in line 89: M8SOlLZ4 A123 17,7
Error in line 94: qcAIsmbbXh4 A123 82,5
Error in line 69: 1mHH6PU2qx A123 119,6
Error in line 106: boKiNH A123 30,6
Error in line 108: boKiNH A365 87,4
Error in line 142: boKiNH S607 236,00
Error in line 133: boKiNH S607 57,7
Error in line 125: vN6Ql A123 0,0
Error in line 148: vN6Ql A365 -2,6
Error in line 145: vN6Ql A365 46,2
Error in line 146: 1mHH6PU2qx S607 1,5
Error in line 152: pClFn8F A439 117,5
Error in line 182: M8SOlLZ4 A439 33,7
Error in line 181: 1mHH6PU2qx A123 92,7
Error in line 205: pClFn8F S607 98,8
Error in line 198: boKiNH S607 21,1
Error in line 209: boKiNH A365 73,1
Error in line 211: A123 A365 41,4
Error in line 200: qcAIsmbbXh4 A439 94,2
Error in line 214: M8SOlLZ4 S607 64,7
Error in line 222: boKiNH A439 330,6
Error in line 221: M8SOlLZ4 A365 56,2
Error in line 225: 1mHH6PU2qx S607 12,7
